devices/MRE_Controller_Data_Package/WIN64/MT_API.h

#define MT_API extern "C" __declspec( dllexport )
#define MT_API __declspec( dllexport )
//PLC相关的函数
//PLC相关的指令码
//读变量存储器大小
MT_API int32_t __stdcall MT_Get_PLC_Var_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PLC_Var_Num(int32_t ADev,int32_t* pValue);
//读变量
MT_API int32_t __stdcall MT_Get_PLC_Var_Data(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PLC_Var_Data(int32_t ADev,uint16_t AObj,int32_t* pValue);
//写变量
MT_API int32_t __stdcall MT_Set_PLC_Var_Data(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_PLC_Var_Data(int32_t ADev,uint16_t AObj,int32_t Value);
//暂停PLC
MT_API int32_t __stdcall MT_Set_PLC_Pause(void);
MT_API int32_t __stdcall MT_M_Set_PLC_Pause(int32_t ADev);
//停止PLC
MT_API int32_t __stdcall MT_Set_PLC_Stop(void);
MT_API int32_t __stdcall MT_M_Set_PLC_Stop(int32_t ADev);
//启动PLC程序
MT_API int32_t __stdcall MT_Set_PLC_Run(void);
MT_API int32_t __stdcall MT_M_Set_PLC_Run(int32_t ADev);
//设置PLC程序代码
MT_API int32_t __stdcall MT_Set_PLC_Data(uint16_t AObj,uint8_t Value);
MT_API int32_t __stdcall MT_M_Set_PLC_Data(int32_t ADev,uint16_t AObj,uint8_t Value);
//读取PLC程序代码大小
MT_API int32_t __stdcall MT_Get_PLC_Code_Size(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PLC_Code_Size(int32_t ADev,int32_t* pValue);
//2017 01 30 PLC V6 Add
//读取任务个数
//PLC任务数
MT_API int32_t __stdcall MT_Get_PLC_Task_Count(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PLC_Task_Count(int32_t ADev,int32_t* pValue);
//PLC任务状态
MT_API int32_t __stdcall MT_Get_PLC_Task_Status(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PLC_Task_Status(int32_t ADev,uint16_t AObj,int32_t* pValue);
//变量分割
MT_API int32_t __stdcall MT_Get_PLC_Var_Seg(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PLC_Var_Seg(int32_t ADev,int32_t* pValue);
//变量个数
MT_API int32_t __stdcall MT_Get_PLC_Var_Used(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PLC_Var_Used(int32_t ADev,int32_t* pValue);
//PLC状态
MT_API int32_t __stdcall MT_Get_PLC_Status(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PLC_Status(int32_t ADev,int32_t* pValue);
//全局状态
MT_API int32_t __stdcall MT_Get_PLC_Tasks_Status(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PLC_Tasks_Status(int32_t ADev,int32_t* pValue);
//Axis Ratio
MT_API int32_t __stdcall MT_Get_PLC_Axis_Ratio(uint16_t AObj,float* pValue);
MT_API int32_t __stdcall MT_M_Get_PLC_Axis_Ratio(int32_t ADev,uint16_t AObj,float* pValue);
MT_API int32_t __stdcall MT_Get_PLC_Encoder_Ratio(uint16_t AObj,float* pValue);
MT_API int32_t __stdcall MT_M_Get_PLC_Encoder_Ratio(int32_t ADev,uint16_t AObj,float* pValue);
//流指令模式
//启动Stream
MT_API int32_t __stdcall MT_Set_Stream_Run(void);
MT_API int32_t __stdcall MT_M_Set_Stream_Run(int32_t ADev);
//停止Stream
MT_API int32_t __stdcall MT_Set_Stream_Stop(void);
MT_API int32_t __stdcall MT_M_Set_Stream_Stop(int32_t ADev);
//暂停Stream
MT_API int32_t __stdcall MT_Set_Stream_Pause(void);
MT_API int32_t __stdcall MT_M_Set_Stream_Pause(int32_t ADev);
//清除Stream
MT_API int32_t __stdcall MT_Set_Stream_Clear(void);
MT_API int32_t __stdcall MT_M_Set_Stream_Clear(int32_t ADev);
//读取剩余空间
MT_API int32_t __stdcall MT_Get_Stream_Space(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Stream_Space(int32_t ADev,int32_t* pValue);
//读取总空间
MT_API int32_t __stdcall MT_Get_Stream_Total(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Stream_Total(int32_t ADev,int32_t* pValue);
//读取总空间
MT_API int32_t __stdcall MT_Get_Stream_Count(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Stream_Count(int32_t ADev,int32_t* pValue);
//以下指令在broadcast中存储并由Stream处理
MT_API int32_t __stdcall MT_Set_Stream_Delay(int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Delay(int32_t ADev,int32_t Value);
//直线插补运动
//设置直线插补加速度
MT_API int32_t __stdcall MT_Set_Stream_Line_Acc(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Line_Acc(int32_t ADev,uint16_t AObj,int32_t Value);
//设置直线插补减速度
MT_API int32_t __stdcall MT_Set_Stream_Line_Dec(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Line_Dec(int32_t ADev,uint16_t AObj,int32_t Value);
//设置直线插补速度
MT_API int32_t __stdcall MT_Set_Stream_Line_V_Max(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Line_V_Max(int32_t ADev,uint16_t AObj,int32_t Value);
//设置直线插补启动速度
MT_API int32_t __stdcall MT_Set_Stream_Line_V_Start(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Line_V_Start(int32_t ADev,uint16_t AObj,int32_t Value);
//设置直线插补停止
MT_API int32_t __stdcall MT_Set_Stream_Line_Stop(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Stream_Line_Stop(int32_t ADev,uint16_t AObj);
//设置直线插补急停
MT_API int32_t __stdcall MT_Set_Stream_Line_Halt(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Stream_Line_Halt(int32_t ADev,uint16_t AObj);
//启动直线插补
MT_API int32_t __stdcall MT_Set_Stream_Line_X_Run_Rel(uint16_t AObj,int32_t AAxis_Num,int32_t* pAxis,int32_t* pTarget);
MT_API int32_t __stdcall MT_M_Set_Stream_Line_X_Run_Rel(int32_t ADev,uint16_t AObj,int32_t AAxis_Num,int32_t* pAxis,int32_t* pTarget);
MT_API int32_t __stdcall MT_Set_Stream_Line_X_Run_Abs(uint16_t AObj,int32_t AAxis_Num,int32_t* pAxis,int32_t* pTarget);
MT_API int32_t __stdcall MT_M_Set_Stream_Line_X_Run_Abs(int32_t ADev,uint16_t AObj,int32_t AAxis_Num,int32_t* pAxis,int32_t* pTarget);
//设置圆弧插补主轴及速度
MT_API int32_t __stdcall MT_Set_Stream_Circle_Axis(uint16_t AObj,int32_t Axis_ID0,int32_t Axis_ID1);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_Axis(int32_t ADev,uint16_t AObj,int32_t Axis_ID0,int32_t Axis_ID1);
//设置圆弧插补加速度
MT_API int32_t __stdcall MT_Set_Stream_Circle_Acc(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_Acc(int32_t ADev,uint16_t AObj,int32_t Value);
//设置圆弧插补减速度
MT_API int32_t __stdcall MT_Set_Stream_Circle_Dec(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_Dec(int32_t ADev,uint16_t AObj,int32_t Value);
//设置圆弧插补速度
MT_API int32_t __stdcall MT_Set_Stream_Circle_V_Max(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_V_Max(int32_t ADev,uint16_t AObj,int32_t Value);
//设置圆弧插补启动速度
MT_API int32_t __stdcall MT_Set_Stream_Circle_V_Start(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_V_Start(int32_t ADev,uint16_t AObj,int32_t Value);
//设置圆弧插补启动 顺时钟  圆心坐标模式
MT_API int32_t __stdcall MT_Set_Stream_Circle_R_CW_Run_Rel(uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_R_CW_Run_Rel(int32_t ADev,uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_Set_Stream_Circle_R_CW_Run_Abs(uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_R_CW_Run_Abs(int32_t ADev,uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
//设置圆弧插补启动 逆时钟   圆心坐标
MT_API int32_t __stdcall MT_Set_Stream_Circle_R_CCW_Run_Rel(uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_R_CCW_Run_Rel(int32_t ADev,uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_Set_Stream_Circle_R_CCW_Run_Abs(uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_R_CCW_Run_Abs(int32_t ADev,uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
//设置圆弧插补停止
MT_API int32_t __stdcall MT_Set_Stream_Circle_Stop(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_Stop(int32_t ADev,uint16_t AObj);
//设置圆弧插补急停
MT_API int32_t __stdcall MT_Set_Stream_Circle_Halt(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_Halt(int32_t ADev,uint16_t AObj);
MT_API int32_t __stdcall MT_Set_Stream_Wait_Line(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Stream_Wait_Line(int32_t ADev,uint16_t AObj);
MT_API int32_t __stdcall MT_Set_Stream_Wait_Circle(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Stream_Wait_Circle(int32_t ADev,uint16_t AObj);
//设置单通道值
MT_API int32_t __stdcall MT_Set_Stream_OC_Out_Single(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_OC_Out_Single(int32_t ADev,uint16_t AObj,int32_t Value);
//设置所有通道值
MT_API int32_t __stdcall MT_Set_Stream_OC_Out_All(int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_OC_Out_All(int32_t ADev,int32_t Value);
//设置单通道值
MT_API int32_t __stdcall MT_Set_Stream_Optic_Out_Single(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Optic_Out_Single(int32_t ADev,uint16_t AObj,int32_t Value);
//设置所有通道值
MT_API int32_t __stdcall MT_Set_Stream_Optic_Out_All(int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Optic_Out_All(int32_t ADev,int32_t Value);
//减速功能
MT_API int32_t __stdcall MT_Set_Stream_Dec_Enable(void);
MT_API int32_t __stdcall MT_M_Set_Stream_Dec_Enable(int32_t ADev);
MT_API int32_t __stdcall MT_Set_Stream_Dec_Disable(void);
MT_API int32_t __stdcall MT_M_Set_Stream_Dec_Disable(int32_t ADev);
//2016 08 20 增加等待输入功能
//等待Optic_In状态
MT_API int32_t __stdcall MT_Set_Stream_Wait_Optic_In(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Wait_Optic_In(int32_t ADev,uint16_t AObj,int32_t Value);
//启动Stream,带密码校验功能
MT_API int32_t __stdcall MT_Set_Stream_Run_Check(void);
MT_API int32_t __stdcall MT_M_Set_Stream_Run_Check(int32_t ADev);
//2019 09 15 running id for UI
MT_API int32_t __stdcall MT_Set_Stream_Run_ID(int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Run_ID(int32_t ADev,int32_t Value);
MT_API int32_t __stdcall MT_Get_Stream_Run_ID(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Stream_Run_ID(int32_t ADev,int32_t* pValue);
//编码器功能
MT_API int32_t __stdcall MT_Get_Encoder_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Encoder_Num(int32_t ADev,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_Encoder_Pos(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Encoder_Pos(int32_t ADev,uint16_t AObj,int32_t* pValue);